--- a/app/src/main/res/layout/item_cards.xml
+++ b/app/src/main/res/layout/item_cards.xml
@@ -6,9 +6,10 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_orange"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
