--- a/app/src/main/res/layout/item_recipes.xml
+++ b/app/src/main/res/layout/item_recipes.xml
@@ -1,27 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:background="@android:color/black"
+    android:layout_height="wrap_content"
+    android:paddingBottom="18dp">
 
-    <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="match_parent"
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/favorites_title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_orange"
-        android:text="RECIPES"
-        android:textColor="@android:color/black"
-        android:textSize="24sp"
+        android:layout_marginTop="15dp"
+        android:text="Любимые рецепты"
+        android:textColor="#80FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tvDesc"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/favorites_rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_orange"
-        android:text="RECIPES "
-        android:textColor="@android:color/darker_gray"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toBottomOf="@id/favorites_title"
+        tools:listitem="@layout/item_recipe" />
+
+    <Button
+        android:id="@+id/btnShowFavourites"
+        android:layout_width="match_parent"
+        android:layout_height="42dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/btn_shape_orange"
+        android:text="Все рецепты"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:textSize="17sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/favorites_rv"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
